infra/k8s/base/clickhouse/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: clickhouse
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: clickhouse
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: vector
      ports:
        - protocol: TCP
          port: 8123
    - from:
        - podSelector:
            matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values: [grafana, signoz, clickhouse-schema]
      ports:
        - protocol: TCP
          port: 9000
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: clickhouse
      ports:
        - protocol: TCP
          port: 9000
        - protocol: TCP
          port: 9009
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: clickhouse-keeper
      ports:
        - protocol: TCP
          port: 9181
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: clickhouse
      ports:
        - protocol: TCP
          port: 9000
        - protocol: TCP
          port: 9009
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: ceph
      ports:
        - protocol: TCP
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: clickhouse-schema
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: clickhouse-schema
  policyTypes: [Ingress, Egress]
  ingress: []
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: clickhouse
      ports:
        - protocol: TCP
          port: 9000
